make creating nested jar work (by opus5)